<resources>
    <string name="app_name" translatable="false">SagarSetu_BLEC</string>
    <string name="main_title" translatable="false">SagarSetu_BLEC</string>
    <string name="bl_app_name" translatable="false">SagarSetu_BLEC</string>
    <string name="bl_app_uuid" translatable="false">220da3b2-41f5-11e7-a919-92ebcb67fe33</string>
    <string name="general__ok">OK</string>
    <string name="general__cancel">Cancel</string>
    <string name="general__exit">Exit</string>
    <string name="general__try_again">Try again</string>
    <string name="general__start_chat">Start chat</string>
    <string name="general__restart">Restart</string>
    <string name="general__yes">Yes</string>
    <string name="general__no">No</string>
    <string name="general__service_lost">SagarSetu_BLEC service just has been stopped, restart the service to be able to use the app</string>
    <string name="general__disconnect">Disconnect</string>
    <string name="general__storage_permission">SagarSetu_BLEC provides you with an ability to share images. This feature requires <b>\"STORAGE\"</b> permission to work correctly</string>
    <string name="general__no_browser">Unable to find browser application</string>
    <string name="general__time_format">MMM dd, yyyy</string>
    <string name="general__time_unknown">unknown</string>
    <string name="general__time_just_now">just now</string>
    <string name="general__time_a_minute_ago">a minute ago</string>
    <string name="general__time_an_hour_ago">an hour ago</string>
    <string name="general__time_yesterday">yesterday</string>
    <plurals name="general__time_minutes_ago">
        <item quantity="one">%d minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="general__time_hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="general__time_days_ago">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <string name="profile__profile">Profile</string>
    <string name="profile__your_name">Your name</string>
    <string name="profile__validation_error">Your name cannot be empty or longer than 25 characters, also, \'%s\' symbol is not allowed</string>
    <string name="profile__edit">Edit</string>
    <string name="profile__name">Name</string>
    <string name="profile__color">Color</string>
    <string name="profile__device">Device</string>
    <string name="profile__no_name">No name</string>
    <string name="profile__save">Save</string>
    <string name="profile__no_bluetooth_settings_activity">Unable to open Bluetooth Settings, if you want to rename your device please do it manually</string>
    <string name="chat__not_connected">Not connected</string>
    <string name="chat__connected">Connected</string>
    <string name="chat__pending">Pending</string>
    <string name="chat__reconnect">Reconnect</string>
    <string name="chat__disconnect">Disconnect</string>
    <string name="chat__sending_failed">Unable to send this message, please try again</string>
    <string name="chat__connection_rejected">Your connection request was rejected</string>
    <string name="chat__waiting_for_device">You are waiting for this device to approve a connection</string>
    <string name="chat__connect">Connect</string>
    <string name="chat__not_connected_to_send">You are not connected to this device</string>
    <string name="chat__connection_request"><![CDATA[<b>%1$s (%2$s)</b> wants to connect to you]]></string>
    <string name="chat__not_connected_to_this_device">You are not connected to this device right now</string>
    <string name="chat__message_cannot_be_empty">Message cannot be empty</string>
    <string name="chat__partner_disconnected">Your partner disconnected from your device. Do you want to reconnect?</string>
    <string name="chat__connection_lost">Connection with this device was lost. Do you want to reconnect?</string>
    <string name="chat__bluetooth_is_disabled">Bluetooth is disabled</string>
    <string name="chat__enable">Enable</string>
    <string name="chat__unable_to_connect">Unable to connect to this device, do you want to try again?</string>
    <string name="chat__rescan">Rescan</string>
    <string name="chat__device_is_not_available">This device is not available right now, make sure it\'s paired</string>
    <string name="chat__bluetooth_required">This app requires Bluetooth enabled to work properly</string>
    <string name="chat__connected_to_another"><![CDATA[You are currently connected to <b>%s</b>. You can connect to this device but current connection will be interrupted]]></string>
    <string name="chat__message_hint">Message</string>
    <string name="chat__chat">Chat</string>
    <string name="chat__too_big_image">This image it too big. Max file size which you can send via SagarSetu_BLEC is %s</string>
    <string name="chat__removed_image">Removed image</string>
    <string name="chat__missing_image">Missing image</string>
    <string name="chat__partner_canceled_image_transfer">Your partner has canceled image transfer</string>
    <string name="chat__problem_during_file_transfer">Problem during image transfer</string>
    <string name="chat__file_not_exist">Unable to find this file, please try again</string>
    <string name="chat__sending_image">Sending image</string>
    <string name="chat__receiving_images">Receiving image</string>
    <string name="chat__partner_unable_to_receive_images">Your partner uses an old version of SagarSetu_BLEC which is not able to receive images.</string>
    <string name="chat__image_message">%s [Image]</string>
    <string name="chat__presharing">You are not connected to this device, please connect and try again.</string>
    <string name="chat__presharing_share">Share</string>
    <string name="chat__unable_to_pick_image">Unable to pick this image, please try again</string>
    <string name="chat__choose_image">Choose Image</string>
    <string name="chat__date_format_day_of_year">MMMM dd</string>
    <string name="chat__date_format_time">HH:mm</string>
    <string name="conversations__no_conversations">You don\'t have any conversations yet\nScan for devices to find your partner</string>
    <string name="conversations__scan">Scan</string>
    <string name="conversations__options">Conversation options</string>
    <string name="conversations__remove">Remove</string>
    <string name="conversations__removal_confirmation">Do you really want to remove this conversation? All messages will be lost</string>
    <string name="conversations__connection_rejected"><![CDATA[Your connection request to <b>%1$s</b> (%2$s) was rejected]]></string>
    <string name="conversations__connection_request"><![CDATA[<b>%1$s (%2$s)</b> wants to connect to you]]></string>
    <string name="conversations__settings">Settings</string>
    <string name="conversations__pin_to_home_screen">Pin to your home screen</string>
    <string name="conversations__permissions_settings">Settings</string>
    <string name="conversations__storage_permission"><![CDATA[Go to Settings and grant the <b>\"STORAGE\"</b> permission to use this app.]]></string>
    <string name="scan__no_devices">No devices were found</string>
    <string name="scan__scan_for_devices">Scan for devices</string>
    <string name="scan__start_scanning">Scan for devices to find your partner or make your device discoverable and he/she will be able to find you</string>
    <string name="scan__scanning">Scanning</string>
    <string name="scan__turn_on">Turn on</string>
    <string name="scan__turn_bluetooth_on">Turn on Bluetooth to find your partner</string>
    <string name="scan__share_apk">Don\'t have an Internet connection? Send the .apk file of this application to your partner via Bluetooth</string>
    <string name="scan__unable_to_share_apk">Unable to start Bluetooth sharing</string>
    <string name="scan__no_access_to_bluetooth">Cannot get access to Bluetooth on your device</string>
    <string name="scan__unable_to_activate">Unable to activate Bluetooth, please activate it manually.</string>
    <string name="scan__bluetooth_disabled">This app requires Bluetooth enabled to work properly</string>
    <string name="scan__stop_scanning">Stop scanning</string>
    <string name="scan__scan">Scan</string>
    <string name="scan__unable_to_make_discoverable">Unable to make your device discoverable</string>
    <string name="scan__unable_to_connect_service">Unable to engage connection, please restart the app</string>
    <string name="scan__unable_to_connect">Unable to connect to this device</string>
    <string name="scan__unable_to_fetch_apk">Unable to fetch an .apk file</string>
    <string name="scan__permission_explanation_location">To be able to find other devices this app requires \"LOCATION\" permission</string>
    <string name="scan__permission_explanation_storage">To be able to extract a file this app requires \"STORAGE\" permission</string>
    <string name="scan__share_intent">Share .apk</string>
    <string name="scan__paired_devices">Paired devices</string>
    <string name="scan__available_devices">Found devices</string>
    <string name="scan__discoverable">Discoverable</string>
    <string name="scan__make_discoverable">Make discoverable</string>
    <string name="scan__no_discoverable_activity">Unable to make your device discoverable, please do it manually</string>
    <string name="initial_setup__initial_setup">Initial Setup</string>
    <string name="notification__ready_to_connect">Ready to connect</string>
    <string name="notification__connected_to">Connected to %s</string>
    <string name="notification__connection_request">Connection request</string>
    <string name="notification__connection_request_body">%s wants to connect to you</string>
    <string name="notification__file_sending">Sending file to %s</string>
    <string name="notification__file_receiving">Receiving file from %s</string>
    <string name="notification__stop">STOP</string>
    <string name="notification__channel_background">Background Service</string>
    <string name="notification__channel_request">Connection Request</string>
    <string name="notification__channel_message">New Message</string>
    <string name="notification__channel_file">File Transfer</string>
    <string name="notification__me">Me</string>
    <string name="notification__reply">Reply</string>
    <string name="notification__sent">Sent</string>
    <string name="contact_chooser__title">Select Chat</string>
    <string name="contact_chooser__no_contacts">Your contact list is empty</string>
    <string name="settings__title">Settings</string>
    <string name="settings__notifications">Notifications</string>
    <string name="settings__discovery">Discovery</string>
    <string name="settings__appearance">Appearance</string>
    <string name="settings__chat_background_color">Chat background color</string>
    <string name="settings__night_mode">Night mode</string>
    <string name="settings__night_mode_on">On</string>
    <string name="settings__night_mode_off">Off</string>
    <string name="settings__night_mode_system">System</string>
    <string name="settings__sound">Sound</string>
    <string name="settings__classification">Show only phones or computers</string>
    <string name="images__image">Image</string>
    <string name="images__remove">Remove</string>
    <string name="about__description">SagarSetu_BLEC is an open source tactical offline Bluetooth communication project. You can review source code, submit issues, or contribute on GitHub</string>
    <string name="about__go_to_github">Go to GitHub</string>
    <string name="about__localization">Help translate SagarSetu_BLEC into more languages on Crowdin</string>
    <string name="about__go_to_crowdin">Go to Crowdin</string>
    <string name="scan__cd__share_apk_file_button">Share .apk file button</string>
</resources>